--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,9 @@ figure#headerIcon {
 	overflow: hidden;
 }
 
-#homePageContent {
+#homePageContent,
+#aboutPageContent,
+#contactPageContent {
 	min-height: 450px;
 	width: 70%;
 	margin: 3em auto;
@@ -128,17 +130,23 @@ figure#headerIcon {
 	box-shadow: 2px 2px 10px #666;
 }
 
-#homePageContent h1 {
+#homePageContent h1,
+#aboutPageContent h1,
+#contactPageContent h1 {
 	text-align: center;
 	padding: 1em;
 }
 
-#homePageContent p {
+#homePageContent p,
+#aboutPageContent p,
+#contactPageContent p {
 	padding: .2em 2em;
 	font-size: .9em;
 }
 
-#homePageContent p:last-child {
+#homePageContent p:last-child,
+#aboutPageContent p:last-child,
+#contactPageContent p:last-child {
 	padding: 2em;
 }
 
