--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@ p {
 	line-height: 1.4;
 }
 
+header,
+a {
+	color: #377F5E;
+}
+
 a {
 	text-decoration: none;
 }
@@ -149,6 +154,39 @@ figure#headerIcon {
 #contactPageContent p:last-child {
 	padding: 2em;
 }
+
+/* ------------------  Contact Page ----------------------------------- */
+section#companyProfile {
+	height: 100%;
+	width: 100%;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-wrap: wrap;
+	flex-wrap: wrap;
+}
+
+.profileBox {
+	-webkit-flex-grow: 1;
+	flex-grow: 1;
+	max-width: 200px;
+	background: #377F5E;
+	color: #fff;
+	margin: 1em;
+}
+
+figure.portrait {
+	background-color: goldenrod;
+	height: 150px;
+}
+
+.profileBox h3,
+#contactPageContent div.profileBox p {
+	padding: .2em;
+}
+
+
+
+/* ------------------  Modal Window ---------------------------------- */
 
 /* ------------------  Footer Elements -------------------------------  */
 
