--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@ a {
 
 a {
 	text-decoration: none;
+	-webkit-transition: .3s ease;
+	-ms-transition: .3s ease;
+	transition: .3s ease;
 }
 
 a:hover {
@@ -53,6 +56,11 @@ ul {
 #logo-wrap {
 	margin: 0 auto;
 	}
+
+button:active,
+button:focus {
+	outline: none;
+}
 
 /* ------------------  Header Elements -------------------------------  */
 header#globalHeader {
@@ -113,6 +121,49 @@ figure#headerIcon {
 	margin: 0 .5em;
 }
 
+#mobileNav {
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 2;
+	width: 100%;
+	display: none;
+}
+
+button#mobileNavBtn {
+	float: right;
+	height: 4em;
+	width: 4em;
+	margin: .4em;
+	background-color: #333;
+	border: .2em solid #FCFCF8;
+	border-radius: .3em;
+	cursor: pointer;
+}
+
+#mobileNav > nav {
+	display: none;
+	position: relative;
+	top: 3em;
+	background-color: #377F5E;
+}
+
+#mobileNav > nav > ul > li {
+	padding: .6em;
+}
+
+#mobileNav > nav > ul > li > a {
+	color: #FCFCF8;
+	display: block;
+	border-bottom: .1em solid #FCFCF8;
+}
+
+#mobileNav > nav > ul > li > a:hover {
+	text-shadow: .05em .05em #224F3B;
+	text-decoration: none;
+	font-size: 1.1em;
+}
+
 
 /* ------------------  Content Elements ------------------------------  */
 #contentSection {
@@ -168,7 +219,7 @@ section#companyProfile {
 .profileBox {
 	-webkit-flex-grow: 1;
 	flex-grow: 1;
-	max-width: 200px;
+	max-width: 24%;
 	background: #377F5E;
 	color: #fff;
 	margin: 1em;
@@ -181,16 +232,74 @@ figure.portrait {
 
 .profileBox h3,
 #contactPageContent div.profileBox p {
-	padding: .2em;
+	padding: .3em;
+}
+
+button#showContactContainer {
+	display: block;
+	margin: 0 auto;
+	font-size: 1.5em;
+	padding: .2em .5em;
+	margin-top: 1.5em;
+	border-radius: .1em;
+	border: .05em solid #377F5E;
+	color: #377F5E;
+	background-color: #fff;
+	cursor: pointer;
+	-webkit-transition: .3s ease;
+	-ms-transition: .3s ease;
+	transition: .3s ease;
+}
+
+button#showContactContainer:hover {
+	background-color: #377F5E;
+	color: #FCFCF8;
+	border-color: #224F3B;
+	text-shadow: .05em .05em #224F3B;
 }
 
 
-
-/* ------------------  Modal Window ---------------------------------- */
+/* ------------------  Contact Container ---------------------------------- */
+#contactContainer {
+	display: none;
+	width: 100%;
+	position: absolute;
+	z-index: 2;
+	top: 0;
+	left: 0;
+}
 
 /* ------------------  Footer Elements -------------------------------  */
 
 footer p {
 	text-align: center;
 	padding: 1em;
+}
+
+/* ------------------- Media Queries --------------------------------- */
+@media only screen and (max-width: 767px) {
+	header#globalHeader > nav {
+		display: none;
+	}
+
+	#mobileNav {
+		display: block;
+	}
+
+	div#logo-wrap {
+		width: 80%;
+	}
+
+	div#logo-wrap h1 {
+		font-size: 1.5em;
+		margin-top: .4em;
+	}
+
+	#contentSection > section {
+		width: 95%;
+	}
+
+	.profileBox {
+		max-width: 45%;
+	}
 }
