Added active class styles and created a function to handle class attribute values for nav elements.

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@ button:focus {
 	outline: none;
 }
 
+.active {
+	color: #999;
+}
+
 /* ------------------  Header Elements -------------------------------  */
 header#globalHeader {
 	height: 3em;
