Toodling around building up content. Need to build up pages using a switcher.

--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,13 @@ button#mobileNavBtn {
 	padding: 2em;
 }
 
+#aboutPageContent,
+#companyPageContent,
+#contactPageContent {
+	display: none;
+}
+
+
 /* ------------------  Company Page ----------------------------------- */
 section#companyProfile {
 	height: 100%;
