Modified the content window display and event to add a class which shows or hides the content.

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ increases. */
 
 html, body, footer {
 	width: 100%;
+	overflow-x: hidden;
+	overflow-y: scroll
 }
 
 body {
@@ -156,6 +158,15 @@ button#mobileNavBtn {
 	border-radius: .5em;
 	cursor: pointer;
 	position: relative;
+	transition: .5s background ease;
+}
+
+button#mobileNavBtn:hover {
+	background-color: #377F5E;
+}
+
+button#mobileNavBtn:hover > svg > path.bar {
+	fill: #fff;
 }
 
 .menu-bar {
@@ -197,8 +208,27 @@ button#mobileNavBtn {
 #contentSection {
 	background-image: url("../img/banner-header.jpg");
 	background-size: cover;
+	background-position: center;
 	width: 100%;
 	overflow: hidden;
+}
+
+#contentSection > section {
+	display: none;
+	position: relative;
+	top: 10%;
+	left: 0;
+}
+
+#contentSection > section.show  {
+	display: block;
+}
+
+#contentSection > section#homePageContent,
+#contentSection > section#aboutPageContent,
+#contentSection > section#companyPageContent,
+#contentSection > section#contactPageContent {
+	transition: 1.5s ease-in-out;
 }
 
 #homePageContent,
@@ -207,11 +237,13 @@ button#mobileNavBtn {
 	min-height: 450px;
 	width: 70%;
 	margin: 3em auto;
-	position: relative;
-	top: 10%;
 	background-color: #FCFCF8;
 	opacity: .9;
 	box-shadow: 2px 2px 10px #666;
+}
+
+#companyPageContent {
+	margin: 0 auto;
 }
 
 #contactPageContent {
@@ -225,10 +257,6 @@ button#mobileNavBtn {
 	padding: 1em;
 }
 
-#contactPageContent h1 {
-	padding-top: 0;
-}
-
 #homePageContent p,
 #aboutPageContent p,
 #contactPageContent p {
@@ -240,12 +268,6 @@ button#mobileNavBtn {
 #aboutPageContent p:last-child,
 #contactPageContent p:last-child {
 	padding: 2em;
-}
-
-#aboutPageContent,
-#companyPageContent,
-#contactPageContent {
-	display: none;
 }
 
 
@@ -287,7 +309,8 @@ figure.portrait {
     opacity: .9;
     display: block;
     flex-grow: 1;
-    padding: 2em;
+    padding: 1em;
+		margin: 1em;
 }
 
 
@@ -366,6 +389,9 @@ footer p {
 
 	#contentSection > section {
 		width: 95%;
+		-webkit-transition: 1.5s background ease-in-out;
+		-ms-transition: 1.5s background ease-in-out;
+		transition: 1.5s background ease-in-out;
 	}
 
 	.profileBox {
