--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,7 @@ section#companyProfile figure.portrait {
 }
 
 #contact-form input[type="text"],
+#contact-form input[type="email"],
 #contact-form textarea {
 	width: 100%;
 	border-radius: 3px;
@@ -337,6 +338,8 @@ section#companyProfile figure.portrait {
 
 #contact-form input[type="text"]:focus,
 #contact-form input[type="text"]:active,
+#contact-form input[type="email"]:focus,
+#contact-form input[type="email"]:active,
 #contact-form textarea:focus,
 #contact-form textarea:active {
 	outline: none;
@@ -362,6 +365,14 @@ button#closeContainer:hover {
 button#send {
 	padding: .3em .5em;
 	margin-left: 0;
+	-webkit-transition: .3s ease-in-out;
+	-moz-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+
+button#send:hover {
+	background-color: #444;
+	color: white;
 }
 
 /* ------------------  Footer Elements -------------------------------  */
