Added z-index properties for the mobile nav so that it sits on top of all other page elements. The company page's portrait image was sitting over the mobile nav.

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ button#mobileNavBtn:hover > svg > path.bar {
 #mobileNav > nav {
 	display: none;
 	position: absolute;
+	z-index: 10;
 	width: 100%;
 	top: 3em;
 	background-color: #377F5E;
@@ -308,6 +309,8 @@ section#companyProfile .profileBox {
 	color: #fff;
 	margin: 1em;
 	overflow: hidden;
+	position: relative;
+	z-index: 1;
 }
 
 section#companyProfile figure.portrait {
