--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
 	color: #222;
 	max-width: 1440px;
 	margin: 0 auto;
+	overflow: hidden;
 }
 
 p {
@@ -85,8 +86,8 @@ html, body, #nd {
 }
 
 #nd > div.nav-background {
-	height: 100%;
 	width: 100%;
+	height: 100%;
 	position: absolute;
 	top: 3em;
 	left: 0;
@@ -94,6 +95,7 @@ html, body, #nd {
 	background-color: #333;
 	opacity: .5;
 	display: none;
+	padding-bottom: 300em;
 }
 
 /* ------------------  Header Elements -------------------------------  */
