--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,11 @@ header#globalHeader {
 	border-bottom: .1em solid #377F5E;
 }
 
+header#globalHeader a.homeBtn {
+	position: relative;
+	z-index: 11;
+}
+
 div#logo-wrap, header#globalHeader > nav {
 	height: inherit;
 }
@@ -576,8 +581,8 @@ footer p {
 	}
 
 	div#logo-wrap h1 {
-		font-size: 1.5em;
-		margin-top: .4em;
+		font-size: 1.3em;
+		margin-top: .5em;
 	}
 
 	#contentSection > section {
@@ -601,7 +606,7 @@ footer p {
 	#homePageContent p,
 	#aboutPageContent p,
 	#contactPageContent p {
-		font-size: 1em;
+		font-size: .8em;
 	}
 
 	button#send {
