--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ header{
 
 header,
 a {
-	color: #377F5E;
+	color: #222;
 }
 
 a {
@@ -103,22 +103,20 @@ form {
 
 #nd > div.nav-background {
 	width: 100%;
-	height: 100%;
+	height: inherit;
 	position: absolute;
 	top: 3em;
 	left: 0;
 	z-index: 5;
-	background-color: #333;
-	opacity: .5;
+	background-color: #222;
+	opacity: .8;
 	display: none;
-	padding-bottom: 300em;
 }
 
 /* ------------------  Header Elements -------------------------------  */
 header#globalHeader {
 	height: 3em;
 	overflow: hidden;
-	border-bottom: .1em solid #377F5E;
 }
 
 header#globalHeader a.homeBtn {
@@ -153,7 +151,7 @@ header#globalHeader > nav > ul {
 header#globalHeader > nav > ul > li {
 	-webkit-flex-grow: 1;
 	flex-grow: 1;
-	border-right: 1px solid #377F5E;
+	border-right: 1px solid #222;
 }
 
 header#globalHeader > nav > ul > li:last-child {
@@ -173,7 +171,9 @@ div#logo-wrap, figure#headerIcon, div#logo-wrap h1 {
 div#logo-wrap h1 {
 	text-transform: uppercase;
 	letter-spacing: 2px;
-	margin-top: .2em;
+	margin-top: .8em;
+	font-weight: 300;
+	font-size: 1.5em;
 }
 
 figure#headerIcon {
@@ -205,7 +205,7 @@ button#mobileNavBtn {
 	width: 4em;
 	margin: .45em;
 	background-color: inherit;
-	border: .2em solid #377F5E;
+	border: .2em solid #222;
 	border-radius: .5em;
 	cursor: pointer;
 	position: relative;
@@ -214,7 +214,7 @@ button#mobileNavBtn {
 }
 
 button#mobileNavBtn:hover {
-	background-color: #377F5E;
+	background-color: #222;
 }
 
 button#mobileNavBtn:hover > svg > path.bar {
@@ -232,7 +232,7 @@ button#mobileNavBtn:hover > svg > path.bar {
 	z-index: 10;
 	width: 100%;
 	top: 3em;
-	background-color: #377F5E;
+	background-color: #222;
 	box-shadow: .5em .5em .5em rgba(0, 0, 0, .5);
 }
 
@@ -566,11 +566,6 @@ footer p.copy-footer {
 
 	div#logo-wrap {
 		width: 80%;
-	}
-
-	div#logo-wrap h1 {
-		font-size: 1.3em;
-		margin-top: .5em;
 	}
 
 	div#contentSection > section {
