--- a/css/style.css
+++ b/css/style.css
@@ -473,39 +473,86 @@ button#send[disabled="disabled"] {
 	background-position: center;
 }
 
-.bolt {
-	background-image: url("../img/array_bolt_2x.jpg");
+@media
+only screen and (-webkit-min-device-pixel-ratio: 1),
+only screen and (min--moz-device-pixel-ratio: 1),
+only screen and (min-device-pixel-ratio: 1) {
+	#nd div.background-array figure.bolt {
+		background-image: url("../img/array_bolt.jpg");
+	}
+
+	#nd div.background-array figure.cable {
+		background-image: url("../img/array_cable.jpg");
+	}
+
+	#nd div.background-array figure.card {
+		background-image: url("../img/array_card.jpg");
+	}
+
+	#nd div.background-array figure.circuitboard {
+		background-image: url("../img/array_circuitboard.jpg");
+	}
+
+	#nd div.background-array figure.coffee {
+		background-image: url("../img/array_coffee.jpg");
+	}
+
+	#nd div.background-array figure.cylinder {
+		background-image: url("../img/array_cylinder.jpg");
+	}
+	#nd div.background-array figure.hardware {
+		background-image: url("../img/array_hardware.jpg");
+	}
+
+	#nd div.background-array figure.input {
+		background-image: url("../img/array_input.jpg");
+	}
+
+	#nd div.background-array figure.prototypes {
+		background-image: url("../img/array_prototypes.jpg");
+	}
 }
 
-.cable {
-	background-image: url("../img/array_cable_2x.jpg");
-}
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min--moz-device-pixel-ratio: 2),
+only screen and (min-device-pixel-ratio: 2),
+only screen and (min-resolution: 192dpi),
+only screen and (min-resolution: 2dppx) {
+	#nd div.background-array figure.bolt {
+		background-image: url("../img/array_bolt_2x.jpg");
+	}
 
-.card {
-	background-image: url("../img/array_card_2x.jpg");
-}
+	#nd div.background-array figure.cable {
+		background-image: url("../img/array_cable_2x.jpg");
+	}
 
-.circuitboard {
-	background-image: url("../img/array_circuitboard_2x.jpg");
-}
+	#nd div.background-array figure.card {
+		background-image: url("../img/array_card_2x.jpg");
+	}
 
-.coffee {
-	background-image: url("../img/array_coffee_2x.jpg");
-}
+	#nd div.background-array figure.circuitboard {
+		background-image: url("../img/array_circuitboard_2x.jpg");
+	}
 
-.cylinder {
-	background-image: url("../img/array_cylinder_2x.jpg");
-}
-.hardware {
-	background-image: url("../img/array_hardware_2x.jpg");
-}
+	#nd div.background-array figure.coffee {
+		background-image: url("../img/array_coffee_2x.jpg");
+	}
 
-.input {
-	background-image: url("../img/array_input_2x.jpg");
-}
+	#nd div.background-array figure.cylinder {
+		background-image: url("../img/array_cylinder_2x.jpg");
+	}
+	#nd div.background-array figure.hardware {
+		background-image: url("../img/array_hardware_2x.jpg");
+	}
 
-.prototypes {
-	background-image: url("../img/array_prototypes_2x.jpg");
+	#nd div.background-array figure.input {
+		background-image: url("../img/array_input_2x.jpg");
+	}
+
+	#nd div.background-array figure.prototypes {
+		background-image: url("../img/array_prototypes_2x.jpg");
+	}
 }
 
 /* ------------------  Footer Elements -------------------------------  */
